--- a/symlinkBugTest/src/styles.scss
+++ b/symlinkBugTest/src/styles.scss
@@ -1,2 +1,3 @@
 // This imports the first file in a symlinked folder.
+// Changes to this file are ALWAYS recompiled automatically
 @import "./link1/style1.scss";
